Release Notes											{#changelog}
=============

2.2.0 release (2021-06-12):
---------------------------

- Added `rsqrt` function for inverse square root.
- Improved performance of `pow` function.
- Fixed bug that forgot to include `<immintrin.h>` for F16C intrinsics.


2.1.0 release (2019-08-05):
---------------------------

- Added detection of IEEE floating-point exceptions to operators and functions.
- Added configuration options for automatic exception handling.
- Added functions for explicitly managing floating-point exception flags.
- Improved accuracy of `pow` and `atan2` functions.


2.0.0 release (2019-07-23):
---------------------------

- Made internal implementation independent from built-in floating point 
  facilities for increased reliability and IEEE-conformance.
- Changed default rounding mode to rounding to nearest.
- Always round ties to even when rounding to nearest.
- Extended `constexpr` support to comparison and classification functions.
- Added support for F16C compiler intrinsics for conversions.
- Enabled C++11 feature detection for Intel compilers.


1.12.0 release (2017-03-06):
----------------------------

- Changed behaviour of `half_cast` to perform conversions to/from `double` 
  and `long double` directly according to specified rounding mode, without an 
  intermediate `float` conversion.
- Added `noexcept` specifiers to constructors.
- Fixed minor portability problem with `logb` and `ilogb`.
- Tested for *VC++ 2015*.


1.11.0 release (2013-11-16):
----------------------------

- Made tie-breaking behaviour in round to nearest configurable by 
  `HALF_ROUND_TIES_TO_EVEN` macro.
- Completed support for all C++11 mathematical functions even if single-
  precision versions from `<cmath>` are unsupported.
- Fixed inability to disable support for C++11 mathematical functions on 
  *VC++ 2013*.


1.10.0 release (2013-11-09):
----------------------------

- Made default rounding mode configurable by `HALF_ROUND_STYLE` macro.